testsuite/poke.pkl/postdecr-diag-5.pk
/* { dg-do compile } */

23--; /* { dg-error "invalid" } */
